rearranging folders, code complies succesfully, however there is Error: Element type is invalid: expected a string (for built-in components) or a class/function (for composite components) but got: object.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
+    "build": "cd client && npm run build",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
