changed the structure of my folders, login is now working but routing into the page once logged in is an issue

--- a/client/package.json
+++ b/client/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "personal-finance-dashboard",
+  "name": "mern",
   "version": "0.1.0",
+  "description": "Mern Demo",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "concurrently": "^5.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "connect-mongo": "^3.2.0",
+    "express-handlebars": "^5.1.0",
+    "method-override": "^3.0.0",
+    "moment": "^2.27.0",
+    "mongo-connect": "0.0.6",
+    "passport-google-oauth20": "^2.0.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-google-login": "^5.1.21",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:5000"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
