--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+node_modules
+.DS_Store
 # dotenv environment variables file
 .env
 config/.env
+config/authkeys
+./config/authkeys
 
 ### Node ###
 # Logs
