--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,23 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "express-handlebars": "^5.1.0",
+    "fontsource-roboto": "^2.2.3",
+    "goober": "^1.8.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongo-connect": "0.0.6",
     "passport-google-oauth20": "^2.0.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.6.3",
+    "react-formik-step": "^0.1.0",
     "react-google-login": "^5.1.21",
+    "react-multistep": "^5.0.5",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
@@ -27,5 +35,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "css-loader": "^3.6.0",
+    "style-loader": "^1.2.1"
+  }
 }
