--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "connect-mongo": "^3.2.0",
     "cookie-session": "^1.4.0",
@@ -27,9 +28,13 @@
     "express": "^4.16.3",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "from": "^0.1.7",
+    "goober": "^1.8.0",
     "google-auth-library": "^6.0.5",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "materialize-css": "^1.0.0-rc.2",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongod": "^2.0.0",
@@ -42,8 +47,11 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2-refresh": "^2.0.0",
+    "react-bootstrap": "^1.2.2",
     "react-google-login": "^5.1.21",
+    "react-pick": "^0.5.0",
     "react-router-dom": "^5.2.0",
+    "setup": "0.0.3",
     "styled-components": "^5.1.1"
   }
 }
